Update code_structure_recommendations.md